Import of KARUPA/Filesys-Notify-KQueue-0.04 from CPAN.
gitpan-cpan-distribution: Filesys-Notify-KQueue
gitpan-cpan-version:      0.04
gitpan-cpan-path:         KARUPA/Filesys-Notify-KQueue-0.04.tar.gz
gitpan-cpan-author:       KARUPA
gitpan-cpan-maturity:     released

--- a/MYMETA.yml
+++ b/MYMETA.yml
@@ -5,9 +5,9 @@ author:
 build_requires:
   ExtUtils::MakeMaker: 6.42
 configure_requires:
-  ExtUtils::MakeMaker: 6.42
+  ExtUtils::MakeMaker: 0
 dynamic_config: 0
-generated_by: 'Module::Install version 1.01, CPAN::Meta::Converter version 2.112600'
+generated_by: 'ExtUtils::MakeMaker version 6.59, CPAN::Meta::Converter version 2.112621'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -15,14 +15,9 @@ meta-spec:
 name: Filesys-Notify-KQueue
 no_index:
   directory:
-    - inc
     - t
-    - xt
+    - inc
 requires:
   File::Find: 0
   IO::KQueue: 0
-resources:
-  homepage: https://github.com/karupanerura/p5-Filesys-Notify-KQueue/tree
-  license: http://dev.perl.org/licenses/
-  repository: git://github.com/karupanerura/p5-Filesys-Notify-KQueue.git
-version: 0.03
+version: 0.04
