--- a/META.yml
+++ b/META.yml
@@ -3,11 +3,13 @@ abstract: 'Wrap IO::KQueue for watching file system.'
 author:
   - 'Kenta Sato <karupa@cpan.org>'
 build_requires:
-  ExtUtils::MakeMaker: 6.42
+  ExtUtils::MakeMaker: 6.36
+  Test::SharedFork: 0
 configure_requires:
-  ExtUtils::MakeMaker: 6.42
+  ExtUtils::MakeMaker: 6.36
 distribution_type: module
-generated_by: 'Module::Install version 1.02'
+dynamic_config: 1
+generated_by: 'Module::Install version 1.04'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -25,4 +27,4 @@ resources:
   homepage: https://github.com/karupanerura/p5-Filesys-Notify-KQueue/tree
   license: http://dev.perl.org/licenses/
   repository: git://github.com/karupanerura/p5-Filesys-Notify-KQueue.git
-version: 0.04
+version: 0.05
