--- a/MYMETA.yml
+++ b/MYMETA.yml
@@ -3,11 +3,12 @@ abstract: 'Wrap IO::KQueue for watching file system.'
 author:
   - 'Kenta Sato <karupa@cpan.org>'
 build_requires:
-  ExtUtils::MakeMaker: 6.42
+  ExtUtils::MakeMaker: 6.36
+  Test::SharedFork: 0
 configure_requires:
-  ExtUtils::MakeMaker: 0
+  ExtUtils::MakeMaker: 6.36
 dynamic_config: 0
-generated_by: 'ExtUtils::MakeMaker version 6.59, CPAN::Meta::Converter version 2.112621'
+generated_by: 'Module::Install version 1.04, CPAN::Meta::Converter version 2.112621'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -15,9 +16,14 @@ meta-spec:
 name: Filesys-Notify-KQueue
 no_index:
   directory:
-    - t
     - inc
+    - t
+    - xt
 requires:
   File::Find: 0
   IO::KQueue: 0
-version: 0.04
+resources:
+  homepage: https://github.com/karupanerura/p5-Filesys-Notify-KQueue/tree
+  license: http://dev.perl.org/licenses/
+  repository: git://github.com/karupanerura/p5-Filesys-Notify-KQueue.git
+version: 0.05
