--- a/MYMETA.yml
+++ b/MYMETA.yml
@@ -6,7 +6,7 @@ build_requires:
   Carp: 0
   Exporter: 0
   ExtUtils::MakeMaker: 6.36
-  File::Path: 0
+  File::Path: 2.06_05
   FindBin: 0
   IO::Handle: 0
   Test::More: 0
@@ -33,4 +33,4 @@ resources:
   homepage: https://github.com/karupanerura/p5-Filesys-Notify-KQueue/tree
   license: http://dev.perl.org/licenses/
   repository: git://github.com/karupanerura/p5-Filesys-Notify-KQueue.git
-version: 0.06
+version: 0.07
