--- a/META.yml
+++ b/META.yml
@@ -3,20 +3,17 @@ abstract: 'Wrap IO::KQueue for watching file system.'
 author:
   - 'Kenta Sato <karupa@cpan.org>'
 build_requires:
-  Carp: 0
-  Exporter: 0
-  ExtUtils::MakeMaker: 6.36
-  File::Path: 2.06_05
-  FindBin: 0
-  IO::Handle: 0
   Test::More: 0
   Test::SharedFork: 0
   parent: 0
+  t::Util: 0
 configure_requires:
-  ExtUtils::MakeMaker: 6.36
-distribution_type: module
-dynamic_config: 1
-generated_by: 'Module::Install version 1.04'
+  CPAN::Meta: 0
+  CPAN::Meta::Prereqs: 0
+  Module::Build: 0.38
+  perl: 5.008_001
+dynamic_config: 0
+generated_by: 'Minilla/v0.7.5, CPAN::Meta::Converter version 2.132661'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -24,14 +21,22 @@ meta-spec:
 name: Filesys-Notify-KQueue
 no_index:
   directory:
-    - inc
     - t
     - xt
+    - inc
+    - share
+    - eg
+    - examples
+    - author
+    - builder
+provides:
+  Filesys::Notify::KQueue:
+    file: lib/Filesys/Notify/KQueue.pm
+    version: 0.09
 requires:
-  File::Find: 0
   IO::KQueue: 0
 resources:
-  homepage: https://github.com/karupanerura/p5-Filesys-Notify-KQueue/tree
-  license: http://dev.perl.org/licenses/
+  bugtracker: https://github.com/karupanerura/p5-Filesys-Notify-KQueue/issues
+  homepage: https://github.com/karupanerura/p5-Filesys-Notify-KQueue
   repository: git://github.com/karupanerura/p5-Filesys-Notify-KQueue.git
-version: 0.08
+version: 0.09
